--- a/static/style.css
+++ b/static/style.css
@@ -18,13 +18,20 @@ header {
     gap: 1rem
 }
 
-header>h1>a {
-    text-decoration: none;
+header>h1 {
     color: white;
 }
 
-header>h1 {
+header>nav>ul {
     list-style: none;
+    display: flex;
+    gap: 3rem
+}
+
+header>nav>ul>li>a {
+    color: white;
+    text-decoration: none;
+    font-size: larger;
 }
 
 main {
@@ -62,6 +69,21 @@ hr {
     width: 100%;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem
+}
+
+.play-again>h3 {
+    gap: 0.5rem;
+}
+
+.play-again>h3>a {
+    color: forestgreen;
+    text-decoration: none;
+}
+
 footer {
     padding: 1rem;
     background-color: forestgreen;
@@ -69,6 +91,12 @@ footer {
     display: flex;
     justify-content: center;
     text-align: center;
+}
+
+.button {
+    background-color: forestgreen;
+    color: white;
+    border: 1px solid black;
 }
 
 footer>p>a {
