--- a/templates/game.html
+++ b/templates/game.html
@@ -17,6 +17,8 @@
 {% endif %}
 <hr>
 
-<h3><a href="/">Play again</a></h3>
-
+<div class="play-again">
+<h3> <a href="/">Play again</a> </h3>
+<h3> <a href="/play">Play again with computer</a> </h3>
+</div>
 {% endblock content %}
