--- a/templates/index.html
+++ b/templates/index.html
@@ -13,5 +13,6 @@
 <h3>Instructions:</h3>
     <p>To play the game enter into the address bar the first player's choice, followed by the second player's choice,<br>
     for example <span class="game-example">127.0.0.1:5000/rock/paper</span> and see who wins!</p>
+    <p>Alernatively, you can play with a computer - just click on the <span class="game-example">Play with Computer</span> button in the top navigation.</p>
 
 {% endblock content %}
